--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -228,8 +228,9 @@
                             <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
                             <% if (user) { %>
                                 <li class="nav-item"><a class="nav-link" href="javascript:openPopUpModal();">Hello, <%= user.nickname %></a></li>
+                                <li class="nav-item"><a class="nav-link" href="/profile"><%= user.nickname %>'s Profile</a></li>
                             <% } else { %>
-                                <li class="nav-item"><a class="nav-link" href="/login;">Login / Signup</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/login">Login / Signup</a></li>
                             <% } %>
                         </ul>
                     </div>
@@ -257,8 +258,9 @@
         </div>
         <div id="demo-modal" class="modal" role="dialog" tabindex="-1">
             <div class="model-inner">
+                <% if (user) { %>
                 <div class="modal-header">
-                    <h3>Hello there, <%= user.nickname%>!</h3>
+                    <h3>Hello there, <%= user.nickname %>!</h3>
                     <button data-id="demo-modal" id="closeModal" aria-label="Close">
                         &times;
                     </button>
@@ -270,8 +272,9 @@
                         <li>Your Email Address: <%= user.email %></li>
                         <li>Email verification: <% if (user.email_verified == false) { %> Unverified <% } else { %> Verified <% } %></li>
                     </ul>
-                    <button onclick="location.href='/logout'" type="button">Logout</button>
+                    <button class="modal-logout" onclick="location.href='/logout'" type="button">Logout</button>
                 </div>
+            <% } %>
             </div>
         </div>
 
@@ -414,6 +417,7 @@
                     document.getElementById("typingIndicator").style.display = "none";
                 }
             });
+
         </script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
