--- a/views/index.ejs
+++ b/views/index.ejs
@@ -192,9 +192,9 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="#!" title="twitter"><i class="fab fa-twitter"></i></a>
+                    <a class="mx-2" href="#!" title="facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="#!" title="github"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
