--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -239,7 +239,8 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link" href="/">Portfolio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/about">About This Project</a></li>
                             <li class="nav-item"><a class="nav-link" href="/chat">Chatbox</a></li>
                             <% if (user) { %>
                                 <li class="nav-item"><a class="nav-link" href="javascript:openPopUpModal();"><%= user.nickname %>'s Profile</a></li>
@@ -296,168 +297,14 @@
         </div>
 
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            var socket = io();
-            var form = document.getElementById("inputForm");
-            var chatField = document.getElementById("inputMessage");
-            var username = document.getElementById("username");
-            
-            var typing = false,
-                timeout = undefined;
-            
-            function timeoutFunction(){
-                typing = false;
-                socket.emit("typing indicator", username.value, false);
-            };
-            
-            function typingNow(){
-                if (typing == false){
-                    typing = true;
-                    socket.emit("typing indicator", username.value, true);
-                    timeout = setTimeout(timeoutFunction, 5000);
-                } else {
-                    clearTimeout(timeout);
-                    timeout = setTimeout(timeoutFunction, 5000);
-                }
-            };
-            
-            chatField.addEventListener("keydown", function(e){
-                if (username.value){
-                    typingNow();
-                }
-            });
-            
-            chatField.addEventListener("keyup", function(e){
-                if (username.value){
-                    typing = true;
-                    socket.emit("typing indicator", username.value, true);
-                    clearTimeout(timeout);
-                    timeout = setTimeout(timeoutFunction, 2000);
-                }
-            });
-
-            function sendText(){
-                var timeNow = new Date();
-                if (chatField.value && username.value) {
-                    socket.emit("chat message", chatField.value, username.value, timeNow);
-
-                    var messageLine = document.createElement("div");
-                    messageLine.className = "myMessage";
-                    messageLine.textContent = username.value + ": " + chatField.value;
-                    chatMessages.appendChild(messageLine);
-
-                    var timeIndicator = document.createElement("div");
-                    timeIndicator.className = "timestamp";
-                    var newTime = timeNow.toLocaleString("en-GB", { timeZone: 'UTC', hour: 'numeric', minute:'numeric', day:'numeric', month:'short', year:'numeric'});
-                    timeIndicator.textContent = newTime;
-                    messageLine.appendChild(timeIndicator);
-                    
-                    //const chatContent = document.getElementById("contents");
-                    contents.scrollTo(0, contents.scrollHeight);
-                    chatField.value = "";
-                } else if (chatField.value && username.value == "") {
-                    username.style.backgroundColor = "red";
-                    username.setAttribute("placeholder","Username is required!");
-                }
-            }
-
-            <% if (user) { %>
-                socket.emit("connected", "has connected to the chat", "<%= user.nickname %>");
-                socket.emit("new user", "<%= user.nickname %>");
-            <% } %> 
-            
-            
-            form.addEventListener("submit", function(e){
-                e.preventDefault();
-                sendText();
-            });
-            
-            username.addEventListener("input", function(){
-                username.style.backgroundColor = "#ffffff";
-            });
-            
-            document.getElementById("inputMessage").addEventListener("keypress", function(e){
-                if (e.keyCode === 13) {
-                    e.preventDefault();
-                    sendText();
-                }
-            });
-            
-            socket.on("chat message", function(msg, username, timestamp){
-                var messageLine = document.createElement("div");
-                messageLine.className = "incomingMessage";
-                messageLine.textContent = username + ": " + msg;
-                chatMessages.appendChild(messageLine);
-
-                var timeIndicator = document.createElement("div");
-                timeIndicator.className = "timestamp";
-                const time = new Date(timestamp);
-                var newTime = time.toLocaleString("en-GB", { timeZone: 'UTC', hour: 'numeric', minute:'numeric', day:'numeric', month:'short', year:'numeric'});
-                timeIndicator.textContent = newTime;
-                messageLine.appendChild(timeIndicator);
-                contents.scrollTo(0, contents.scrollHeight);
-            });
-            
-            socket.on("output history", function(msg, username, timestamp){
-                var messageLine = document.createElement("div");
-                if (username == "<%= user.nickname %>") {
-                    messageLine.className = "myMessage";
-                } else {
-                    messageLine.className = "incomingMessage";
-                } 
-                messageLine.textContent = username + ": " + msg;
-                chatMessages.appendChild(messageLine);
-
-                var timeIndicator = document.createElement("div");
-                timeIndicator.className = "timestamp";
-                const time = new Date(timestamp);
-                var newTime = time.toLocaleString("en-GB", { timeZone: 'UTC', hour: 'numeric', minute:'numeric', day:'numeric', month:'short', year:'numeric'});
-                timeIndicator.textContent = newTime;
-                messageLine.appendChild(timeIndicator);
-
-                contents.scrollTo(0, contents.scrollHeight);
-            })
-
-            socket.on("connected", function(msg, username, timestamp){
-                var messageLine = document.createElement("div");
-                messageLine.className = "incomingMessage"; 
-                messageLine.textContent = username + ": " + msg;
-                chatMessages.appendChild(messageLine);
-
-                var timeIndicator = document.createElement("div");
-                timeIndicator.className = "timestamp";
-                timeIndicator.textContent = timestamp;
-                messageLine.appendChild(timeIndicator);
-                contents.scrollTo(0, contents.scrollHeight);
-            })
-            
-            socket.on("typing indicator", function(username, isTyping){
-                var typing = document.getElementById("typingIndicator");
-                if (isTyping) {
-                    document.getElementById("typingIndicator").style.display = "block";
-                    typing.innerHTML = username + " is typing...";
-                } else {
-                    typing.innerHTML = "";
-                    document.getElementById("typingIndicator").style.display = "none";
-                }
-            });
-
-            socket.on("active users", function(users){
-                var ul = document.getElementById("memberList");
-                while(ul.firstChild) {
-                    ul.removeChild(ul.firstChild);
-                }
-
-                for (const user of users) {
-                    var li = document.createElement("li");
-                    li.className = "members";
-                    li.textContent = user;
-                    ul.appendChild(li);
-                }
-            });
-        </script>
+        <script>var user = <%- JSON.stringify(user) %>;</script>
+        <script src="js/chat-scripts.js"></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!--JQuery-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/themes/smoothness/jquery-ui.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
