--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -4606,6 +4606,30 @@ textarea.form-control-lg {
   color: #fff;
 }
 
+.card-lg {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 75vw;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+.card-med {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 50vw;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
 .card {
   position: relative;
   display: flex;
